# capability-manifest

./: .editorconfig  README.md  SPEC.md  capabilities.schema.json  main.py  pyproject.toml
examples/zarr-extensions/: README.md  capabilities.toml  capabilities.yaml
examples/zarr-extensions/codecs/: capabilities.toml
examples/zarr-extensions/codecs/n5_default/: capabilities.toml
examples/zarr-python-n5/: README.md  capabilities.toml
examples/zarr-specs/: README.md  capabilities.toml  capabilities.yaml
python/: pyproject.toml
python/src/capman/: __init__.py  parse.py  resolver.py  types.py
python/src/capman/cli/: main.py
